// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render HomeScreen shold render and show an error 1`] = `
<Text
  testID="error"
>
  Error : 
  Syntax Error: Expected Name, found &lt;EOF&gt;
</Text>
`;

exports[`Should render HomeScreen should render 5 cards when loading is done 1`] = `
<RCTSafeAreaView>
  <View
    style={
      {
        "alignItems": "center",
        "color": "black",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 10,
      }
    }
  >
    <Text
      style={
        {
          "color": "black",
        }
      }
    >
      Here is 
      826
       characters
    </Text>
    <Text
      style={
        {
          "color": "black",
        }
      }
    >
      Displayed: 
      5
    </Text>
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          [
            {},
          ]
        }
      >
        <Text
          style={
            [
              {
                "color": "#007AFF",
                "fontSize": 18,
                "margin": 8,
                "textAlign": "center",
              },
            ]
          }
        >
          Add
        </Text>
      </View>
    </View>
  </View>
  <RCTScrollView
    ListFooterComponent={null}
    contentContainerStyle={
      {
        "alignItems": "center",
        "flexDirection": "column",
        "paddingBottom": 200,
      }
    }
    data={
      [
        {
          "id": 0,
          "image": "https://loremflickr.com/2777/1657?lock=4826925707980572",
          "name": "Kiley_McKenzie",
        },
        {
          "id": 1,
          "image": "https://loremflickr.com/557/3229?lock=1489378201039932",
          "name": "Malcolm_Welch90",
        },
        {
          "id": 2,
          "image": "https://loremflickr.com/3004/1396?lock=8069425676868339",
          "name": "Timmy_Rolfson",
        },
        {
          "id": 3,
          "image": "https://loremflickr.com/2313/1633?lock=8136919344356607",
          "name": "Hilbert.Ondricka-Mueller",
        },
        {
          "id": 4,
          "image": "https://picsum.photos/seed/VGZa8/1429/3634",
          "name": "Kiera52",
        },
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    getItemLayout={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onRefresh={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        refreshing={false}
      />
    }
    refreshing={false}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={0.0001}
    stickyHeaderIndices={[]}
    testID="container"
    viewabilityConfigCallbackPairs={[]}
  >
    <RCTRefreshControl />
    <View>
      <View
        onFocusCapture={[Function]}
        style={null}
      >
        <View
          style={
            {
              "alignItems": "center",
              "borderColor": "#841584",
              "borderRadius": 10,
              "borderWidth": 2,
              "flexDirection": "column",
              "height": 280,
              "margin": 10,
              "padding": 25,
            }
          }
          testID="card"
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
            testID="touch"
          >
            <Image
              src="https://loremflickr.com/2777/1657?lock=4826925707980572"
              style={
                {
                  "height": 200,
                  "width": 200,
                }
              }
            />
            <Text
              numberOfLines={1}
              style={
                {
                  "color": "black",
                  "fontSize": 24,
                  "width": 200,
                }
              }
            >
              Kiley_McKenzie
            </Text>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        style={null}
      >
        <View
          style={
            {
              "alignItems": "center",
              "borderColor": "#841584",
              "borderRadius": 10,
              "borderWidth": 2,
              "flexDirection": "column",
              "height": 280,
              "margin": 10,
              "padding": 25,
            }
          }
          testID="card"
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
            testID="touch"
          >
            <Image
              src="https://loremflickr.com/557/3229?lock=1489378201039932"
              style={
                {
                  "height": 200,
                  "width": 200,
                }
              }
            />
            <Text
              numberOfLines={1}
              style={
                {
                  "color": "black",
                  "fontSize": 24,
                  "width": 200,
                }
              }
            >
              Malcolm_Welch90
            </Text>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        style={null}
      >
        <View
          style={
            {
              "alignItems": "center",
              "borderColor": "#841584",
              "borderRadius": 10,
              "borderWidth": 2,
              "flexDirection": "column",
              "height": 280,
              "margin": 10,
              "padding": 25,
            }
          }
          testID="card"
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
            testID="touch"
          >
            <Image
              src="https://loremflickr.com/3004/1396?lock=8069425676868339"
              style={
                {
                  "height": 200,
                  "width": 200,
                }
              }
            />
            <Text
              numberOfLines={1}
              style={
                {
                  "color": "black",
                  "fontSize": 24,
                  "width": 200,
                }
              }
            >
              Timmy_Rolfson
            </Text>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        style={null}
      >
        <View
          style={
            {
              "alignItems": "center",
              "borderColor": "#841584",
              "borderRadius": 10,
              "borderWidth": 2,
              "flexDirection": "column",
              "height": 280,
              "margin": 10,
              "padding": 25,
            }
          }
          testID="card"
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
            testID="touch"
          >
            <Image
              src="https://loremflickr.com/2313/1633?lock=8136919344356607"
              style={
                {
                  "height": 200,
                  "width": 200,
                }
              }
            />
            <Text
              numberOfLines={1}
              style={
                {
                  "color": "black",
                  "fontSize": 24,
                  "width": 200,
                }
              }
            >
              Hilbert.Ondricka-Mueller
            </Text>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        style={null}
      >
        <View
          style={
            {
              "alignItems": "center",
              "borderColor": "#841584",
              "borderRadius": 10,
              "borderWidth": 2,
              "flexDirection": "column",
              "height": 280,
              "margin": 10,
              "padding": 25,
            }
          }
          testID="card"
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
            testID="touch"
          >
            <Image
              src="https://picsum.photos/seed/VGZa8/1429/3634"
              style={
                {
                  "height": 200,
                  "width": 200,
                }
              }
            />
            <Text
              numberOfLines={1}
              style={
                {
                  "color": "black",
                  "fontSize": 24,
                  "width": 200,
                }
              }
            >
              Kiera52
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RCTSafeAreaView>
`;

exports[`Should render HomeScreen should render 5 more cards after calling endReached   1`] = `
<RCTSafeAreaView>
  <View
    style={
      {
        "alignItems": "center",
        "color": "black",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 10,
      }
    }
  >
    <Text
      style={
        {
          "color": "black",
        }
      }
    >
      Here is 
      826
       characters
    </Text>
    <Text
      style={
        {
          "color": "black",
        }
      }
    >
      Displayed: 
      10
    </Text>
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          [
            {},
          ]
        }
      >
        <Text
          style={
            [
              {
                "color": "#007AFF",
                "fontSize": 18,
                "margin": 8,
                "textAlign": "center",
              },
            ]
          }
        >
          Add
        </Text>
      </View>
    </View>
  </View>
  <RCTScrollView
    ListFooterComponent={null}
    contentContainerStyle={
      {
        "alignItems": "center",
        "flexDirection": "column",
        "paddingBottom": 200,
      }
    }
    data={
      [
        {
          "id": 0,
          "image": "https://picsum.photos/seed/K4gNbD/266/1480",
          "name": "Kory_Lubowitz66",
        },
        {
          "id": 1,
          "image": "https://loremflickr.com/3631/3727?lock=2110946007452403",
          "name": "Judson73",
        },
        {
          "id": 2,
          "image": "https://picsum.photos/seed/VUoXa78v/1560/1944",
          "name": "Lexie_Wiegand",
        },
        {
          "id": 3,
          "image": "https://loremflickr.com/524/3238?lock=8467735414249535",
          "name": "Alan.Shields17",
        },
        {
          "id": 4,
          "image": "https://loremflickr.com/3194/1143?lock=5396305916535602",
          "name": "Kristina_Sporer",
        },
        {
          "id": 0,
          "image": "https://picsum.photos/seed/3qGU0YnY/2311/736",
          "name": "Adrienne31",
        },
        {
          "id": 1,
          "image": "https://picsum.photos/seed/RkFrnpojC/3000/3433",
          "name": "Lelah_Marvin",
        },
        {
          "id": 2,
          "image": "https://picsum.photos/seed/fRwNzJ/3520/3615",
          "name": "Hilton34",
        },
        {
          "id": 3,
          "image": "https://picsum.photos/seed/OSGz9s/1512/319",
          "name": "Josiah.Marks34",
        },
        {
          "id": 4,
          "image": "https://loremflickr.com/1029/444?lock=4499854169819259",
          "name": "Ewell91",
        },
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    getItemLayout={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onRefresh={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        refreshing={false}
      />
    }
    refreshing={false}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={0.0001}
    stickyHeaderIndices={[]}
    testID="container"
    viewabilityConfigCallbackPairs={[]}
  >
    <RCTRefreshControl />
    <View>
      <View
        onFocusCapture={[Function]}
        style={null}
      >
        <View
          style={
            {
              "alignItems": "center",
              "borderColor": "#841584",
              "borderRadius": 10,
              "borderWidth": 2,
              "flexDirection": "column",
              "height": 280,
              "margin": 10,
              "padding": 25,
            }
          }
          testID="card"
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
            testID="touch"
          >
            <Image
              src="https://picsum.photos/seed/K4gNbD/266/1480"
              style={
                {
                  "height": 200,
                  "width": 200,
                }
              }
            />
            <Text
              numberOfLines={1}
              style={
                {
                  "color": "black",
                  "fontSize": 24,
                  "width": 200,
                }
              }
            >
              Kory_Lubowitz66
            </Text>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        style={null}
      >
        <View
          style={
            {
              "alignItems": "center",
              "borderColor": "#841584",
              "borderRadius": 10,
              "borderWidth": 2,
              "flexDirection": "column",
              "height": 280,
              "margin": 10,
              "padding": 25,
            }
          }
          testID="card"
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
            testID="touch"
          >
            <Image
              src="https://loremflickr.com/3631/3727?lock=2110946007452403"
              style={
                {
                  "height": 200,
                  "width": 200,
                }
              }
            />
            <Text
              numberOfLines={1}
              style={
                {
                  "color": "black",
                  "fontSize": 24,
                  "width": 200,
                }
              }
            >
              Judson73
            </Text>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        style={null}
      >
        <View
          style={
            {
              "alignItems": "center",
              "borderColor": "#841584",
              "borderRadius": 10,
              "borderWidth": 2,
              "flexDirection": "column",
              "height": 280,
              "margin": 10,
              "padding": 25,
            }
          }
          testID="card"
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
            testID="touch"
          >
            <Image
              src="https://picsum.photos/seed/VUoXa78v/1560/1944"
              style={
                {
                  "height": 200,
                  "width": 200,
                }
              }
            />
            <Text
              numberOfLines={1}
              style={
                {
                  "color": "black",
                  "fontSize": 24,
                  "width": 200,
                }
              }
            >
              Lexie_Wiegand
            </Text>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        style={null}
      >
        <View
          style={
            {
              "alignItems": "center",
              "borderColor": "#841584",
              "borderRadius": 10,
              "borderWidth": 2,
              "flexDirection": "column",
              "height": 280,
              "margin": 10,
              "padding": 25,
            }
          }
          testID="card"
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
            testID="touch"
          >
            <Image
              src="https://loremflickr.com/524/3238?lock=8467735414249535"
              style={
                {
                  "height": 200,
                  "width": 200,
                }
              }
            />
            <Text
              numberOfLines={1}
              style={
                {
                  "color": "black",
                  "fontSize": 24,
                  "width": 200,
                }
              }
            >
              Alan.Shields17
            </Text>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        style={null}
      >
        <View
          style={
            {
              "alignItems": "center",
              "borderColor": "#841584",
              "borderRadius": 10,
              "borderWidth": 2,
              "flexDirection": "column",
              "height": 280,
              "margin": 10,
              "padding": 25,
            }
          }
          testID="card"
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
            testID="touch"
          >
            <Image
              src="https://loremflickr.com/3194/1143?lock=5396305916535602"
              style={
                {
                  "height": 200,
                  "width": 200,
                }
              }
            />
            <Text
              numberOfLines={1}
              style={
                {
                  "color": "black",
                  "fontSize": 24,
                  "width": 200,
                }
              }
            >
              Kristina_Sporer
            </Text>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        style={null}
      >
        <View
          style={
            {
              "alignItems": "center",
              "borderColor": "#841584",
              "borderRadius": 10,
              "borderWidth": 2,
              "flexDirection": "column",
              "height": 280,
              "margin": 10,
              "padding": 25,
            }
          }
          testID="card"
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
            testID="touch"
          >
            <Image
              src="https://picsum.photos/seed/3qGU0YnY/2311/736"
              style={
                {
                  "height": 200,
                  "width": 200,
                }
              }
            />
            <Text
              numberOfLines={1}
              style={
                {
                  "color": "black",
                  "fontSize": 24,
                  "width": 200,
                }
              }
            >
              Adrienne31
            </Text>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        style={null}
      >
        <View
          style={
            {
              "alignItems": "center",
              "borderColor": "#841584",
              "borderRadius": 10,
              "borderWidth": 2,
              "flexDirection": "column",
              "height": 280,
              "margin": 10,
              "padding": 25,
            }
          }
          testID="card"
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
            testID="touch"
          >
            <Image
              src="https://picsum.photos/seed/RkFrnpojC/3000/3433"
              style={
                {
                  "height": 200,
                  "width": 200,
                }
              }
            />
            <Text
              numberOfLines={1}
              style={
                {
                  "color": "black",
                  "fontSize": 24,
                  "width": 200,
                }
              }
            >
              Lelah_Marvin
            </Text>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        style={null}
      >
        <View
          style={
            {
              "alignItems": "center",
              "borderColor": "#841584",
              "borderRadius": 10,
              "borderWidth": 2,
              "flexDirection": "column",
              "height": 280,
              "margin": 10,
              "padding": 25,
            }
          }
          testID="card"
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
            testID="touch"
          >
            <Image
              src="https://picsum.photos/seed/fRwNzJ/3520/3615"
              style={
                {
                  "height": 200,
                  "width": 200,
                }
              }
            />
            <Text
              numberOfLines={1}
              style={
                {
                  "color": "black",
                  "fontSize": 24,
                  "width": 200,
                }
              }
            >
              Hilton34
            </Text>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        style={null}
      >
        <View
          style={
            {
              "alignItems": "center",
              "borderColor": "#841584",
              "borderRadius": 10,
              "borderWidth": 2,
              "flexDirection": "column",
              "height": 280,
              "margin": 10,
              "padding": 25,
            }
          }
          testID="card"
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
            testID="touch"
          >
            <Image
              src="https://picsum.photos/seed/OSGz9s/1512/319"
              style={
                {
                  "height": 200,
                  "width": 200,
                }
              }
            />
            <Text
              numberOfLines={1}
              style={
                {
                  "color": "black",
                  "fontSize": 24,
                  "width": 200,
                }
              }
            >
              Josiah.Marks34
            </Text>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        style={null}
      >
        <View
          style={
            {
              "alignItems": "center",
              "borderColor": "#841584",
              "borderRadius": 10,
              "borderWidth": 2,
              "flexDirection": "column",
              "height": 280,
              "margin": 10,
              "padding": 25,
            }
          }
          testID="card"
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
            testID="touch"
          >
            <Image
              src="https://loremflickr.com/1029/444?lock=4499854169819259"
              style={
                {
                  "height": 200,
                  "width": 200,
                }
              }
            />
            <Text
              numberOfLines={1}
              style={
                {
                  "color": "black",
                  "fontSize": 24,
                  "width": 200,
                }
              }
            >
              Ewell91
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RCTSafeAreaView>
`;

exports[`Should render HomeScreen should render and show progress on loading 1`] = `
<Text
  testID="progress"
>
  Loading...
</Text>
`;

exports[`Should render HomeScreen should render last page, call endReached and show noMoreCharacters 1`] = `
<RCTSafeAreaView>
  <View
    style={
      {
        "alignItems": "center",
        "color": "black",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 10,
      }
    }
  >
    <Text
      style={
        {
          "color": "black",
        }
      }
    >
      Here is 
      826
       characters
    </Text>
    <Text
      style={
        {
          "color": "black",
        }
      }
    >
      Displayed: 
      5
    </Text>
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          [
            {},
          ]
        }
      >
        <Text
          style={
            [
              {
                "color": "#007AFF",
                "fontSize": 18,
                "margin": 8,
                "textAlign": "center",
              },
            ]
          }
        >
          Add
        </Text>
      </View>
    </View>
  </View>
  <RCTScrollView
    ListFooterComponent={
      <Text
        testID="noMoreCharacters"
      >
        There is no more characters
      </Text>
    }
    contentContainerStyle={
      {
        "alignItems": "center",
        "flexDirection": "column",
        "paddingBottom": 200,
      }
    }
    data={
      [
        {
          "id": 0,
          "image": "https://picsum.photos/seed/9CxE8Kd/935/408",
          "name": "Monserrate_Franey",
        },
        {
          "id": 1,
          "image": "https://picsum.photos/seed/Q6EHBN2LJ/2154/3466",
          "name": "Josiane87",
        },
        {
          "id": 2,
          "image": "https://loremflickr.com/3131/3961?lock=1288081989709971",
          "name": "Destiny.Nader",
        },
        {
          "id": 3,
          "image": "https://loremflickr.com/2106/542?lock=236155859812270",
          "name": "Stephany_Wolf",
        },
        {
          "id": 4,
          "image": "https://loremflickr.com/2764/755?lock=5238383590005698",
          "name": "Carolanne86",
        },
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    getItemLayout={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onRefresh={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        refreshing={false}
      />
    }
    refreshing={false}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={0.0001}
    stickyHeaderIndices={[]}
    testID="container"
    viewabilityConfigCallbackPairs={[]}
  >
    <RCTRefreshControl />
    <View>
      <View
        onFocusCapture={[Function]}
        style={null}
      >
        <View
          style={
            {
              "alignItems": "center",
              "borderColor": "#841584",
              "borderRadius": 10,
              "borderWidth": 2,
              "flexDirection": "column",
              "height": 280,
              "margin": 10,
              "padding": 25,
            }
          }
          testID="card"
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
            testID="touch"
          >
            <Image
              src="https://picsum.photos/seed/9CxE8Kd/935/408"
              style={
                {
                  "height": 200,
                  "width": 200,
                }
              }
            />
            <Text
              numberOfLines={1}
              style={
                {
                  "color": "black",
                  "fontSize": 24,
                  "width": 200,
                }
              }
            >
              Monserrate_Franey
            </Text>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        style={null}
      >
        <View
          style={
            {
              "alignItems": "center",
              "borderColor": "#841584",
              "borderRadius": 10,
              "borderWidth": 2,
              "flexDirection": "column",
              "height": 280,
              "margin": 10,
              "padding": 25,
            }
          }
          testID="card"
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
            testID="touch"
          >
            <Image
              src="https://picsum.photos/seed/Q6EHBN2LJ/2154/3466"
              style={
                {
                  "height": 200,
                  "width": 200,
                }
              }
            />
            <Text
              numberOfLines={1}
              style={
                {
                  "color": "black",
                  "fontSize": 24,
                  "width": 200,
                }
              }
            >
              Josiane87
            </Text>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        style={null}
      >
        <View
          style={
            {
              "alignItems": "center",
              "borderColor": "#841584",
              "borderRadius": 10,
              "borderWidth": 2,
              "flexDirection": "column",
              "height": 280,
              "margin": 10,
              "padding": 25,
            }
          }
          testID="card"
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
            testID="touch"
          >
            <Image
              src="https://loremflickr.com/3131/3961?lock=1288081989709971"
              style={
                {
                  "height": 200,
                  "width": 200,
                }
              }
            />
            <Text
              numberOfLines={1}
              style={
                {
                  "color": "black",
                  "fontSize": 24,
                  "width": 200,
                }
              }
            >
              Destiny.Nader
            </Text>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        style={null}
      >
        <View
          style={
            {
              "alignItems": "center",
              "borderColor": "#841584",
              "borderRadius": 10,
              "borderWidth": 2,
              "flexDirection": "column",
              "height": 280,
              "margin": 10,
              "padding": 25,
            }
          }
          testID="card"
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
            testID="touch"
          >
            <Image
              src="https://loremflickr.com/2106/542?lock=236155859812270"
              style={
                {
                  "height": 200,
                  "width": 200,
                }
              }
            />
            <Text
              numberOfLines={1}
              style={
                {
                  "color": "black",
                  "fontSize": 24,
                  "width": 200,
                }
              }
            >
              Stephany_Wolf
            </Text>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        style={null}
      >
        <View
          style={
            {
              "alignItems": "center",
              "borderColor": "#841584",
              "borderRadius": 10,
              "borderWidth": 2,
              "flexDirection": "column",
              "height": 280,
              "margin": 10,
              "padding": 25,
            }
          }
          testID="card"
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
            testID="touch"
          >
            <Image
              src="https://loremflickr.com/2764/755?lock=5238383590005698"
              style={
                {
                  "height": 200,
                  "width": 200,
                }
              }
            />
            <Text
              numberOfLines={1}
              style={
                {
                  "color": "black",
                  "fontSize": 24,
                  "width": 200,
                }
              }
            >
              Carolanne86
            </Text>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
      >
        <Text
          testID="noMoreCharacters"
        >
          There is no more characters
        </Text>
      </View>
    </View>
  </RCTScrollView>
</RCTSafeAreaView>
`;

exports[`Should render HomeScreen should render without data 1`] = `
<Text
  testID="noData"
>
  Sorry, there is no data to show
</Text>
`;
